src/features2d.h

    typedef cv::Ptr<cv::AKAZE> *AKAZE;
    typedef cv::Ptr<cv::AgastFeatureDetector> *AgastFeatureDetector;
    typedef cv::Ptr<cv::BRISK> *BRISK;
    typedef cv::Ptr<cv::FastFeatureDetector> *FastFeatureDetector;
    typedef cv::Ptr<cv::GFTTDetector> *GFTTDetector;
    typedef cv::Ptr<cv::BFMatcher> *BFMatcher;
    typedef cv::Ptr<cv::FlannBasedMatcher> *FlannBasedMatcher;
typedef void *AKAZE;
typedef void *AgastFeatureDetector;
typedef void *BRISK;
typedef void *FastFeatureDetector;
typedef void *GFTTDetector;
typedef void *BFMatcher;
typedef void *FlannBasedMatcher;
    AKAZE AKAZE_Create();
    void AKAZE_Close(AKAZE a);
    struct KeyPoints AKAZE_Detect(AKAZE a, Mat src);
    struct KeyPoints AKAZE_DetectAndCompute(AKAZE a, Mat src, Mat mask, Mat desc);
    AgastFeatureDetector AgastFeatureDetector_Create();
    void AgastFeatureDetector_Close(AgastFeatureDetector a);
    struct KeyPoints AgastFeatureDetector_Detect(AgastFeatureDetector a, Mat src);
    BRISK BRISK_Create();
    void BRISK_Close(BRISK b);
    struct KeyPoints BRISK_Detect(BRISK b, Mat src);
    struct KeyPoints BRISK_DetectAndCompute(BRISK b, Mat src, Mat mask, Mat desc);
    FastFeatureDetector FastFeatureDetector_Create();
    FastFeatureDetector FastFeatureDetector_CreateWithParams(int threshold, bool nonmaxSuppression, int type);
    void FastFeatureDetector_Close(FastFeatureDetector f);
    struct KeyPoints FastFeatureDetector_Detect(FastFeatureDetector f, Mat src);
    GFTTDetector GFTTDetector_Create();
    void GFTTDetector_Close(GFTTDetector a);
    struct KeyPoints GFTTDetector_Detect(GFTTDetector a, Mat src);
    BFMatcher BFMatcher_Create();
    BFMatcher BFMatcher_CreateWithParams(int normType, bool crossCheck);
    void BFMatcher_Close(BFMatcher b);
    struct DMatches BFMatcher_Match(BFMatcher b, Mat query, Mat train);
    struct MultiDMatches BFMatcher_KnnMatch(BFMatcher b, Mat query, Mat train, int k);
    FlannBasedMatcher FlannBasedMatcher_Create();
    void FlannBasedMatcher_Close(FlannBasedMatcher f);
    struct MultiDMatches FlannBasedMatcher_KnnMatch(FlannBasedMatcher f, Mat query, Mat train, int k);
    void DrawKeyPoints(Mat src, struct KeyPoints kp, Mat dst, const Scalar s, int flags);
    void DrawMatches(Mat img1, struct KeyPoints kp1, Mat img2, struct KeyPoints kp2, struct DMatches matches1to2, Mat outImg, const Scalar matchesColor, const Scalar pointColor, struct ByteArray matchesMask, int flags);