lib/src/g/features2d.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    some c wrappers were from gocv: https://github.com/hybridgroup/gocv
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:opencv_dart/opencv_dart.dart')
library;

import 'dart:ffi' as ffi;
import 'package:opencv_dart/src/g/types.g.dart' as imp1;
import '' as self;

@ffi.Native<ffi.Void Function(AKAZEPtr)>()
external void AKAZE_Close(
  AKAZEPtr a,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(AKAZEPtr, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> AKAZE_Close_Async(
  AKAZEPtr self,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<AKAZE>)>()
external ffi.Pointer<CvStatus> AKAZE_Create(
  ffi.Pointer<AKAZE> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> AKAZE_Create_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(AKAZE, Mat, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> AKAZE_Detect(
  AKAZE a,
  Mat src,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        AKAZE, Mat, Mat, Mat, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> AKAZE_DetectAndCompute(
  AKAZE a,
  Mat src,
  Mat mask,
  Mat desc,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(AKAZE, Mat, Mat, imp1.CvCallback_2)>()
external ffi.Pointer<CvStatus> AKAZE_DetectAndCompute_Async(
  AKAZE self,
  Mat src,
  Mat mask,
  imp1.CvCallback_2 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(AKAZE, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> AKAZE_Detect_Async(
  AKAZE self,
  Mat src,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Void Function(AgastFeatureDetectorPtr)>()
external void AgastFeatureDetector_Close(
  AgastFeatureDetectorPtr a,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        AgastFeatureDetectorPtr, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> AgastFeatureDetector_Close_Async(
  AgastFeatureDetectorPtr self,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<AgastFeatureDetector>)>()
external ffi.Pointer<CvStatus> AgastFeatureDetector_Create(
  ffi.Pointer<AgastFeatureDetector> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> AgastFeatureDetector_Create_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        AgastFeatureDetector, Mat, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> AgastFeatureDetector_Detect(
  AgastFeatureDetector a,
  Mat src,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        AgastFeatureDetector, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> AgastFeatureDetector_Detect_Async(
  AgastFeatureDetector self,
  Mat src,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Void Function(BFMatcherPtr)>()
external void BFMatcher_Close(
  BFMatcherPtr b,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(BFMatcherPtr, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> BFMatcher_Close_Async(
  BFMatcherPtr self,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<BFMatcher>)>()
external ffi.Pointer<CvStatus> BFMatcher_Create(
  ffi.Pointer<BFMatcher> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Bool, ffi.Pointer<BFMatcher>)>()
external ffi.Pointer<CvStatus> BFMatcher_CreateWithParams(
  int normType,
  bool crossCheck,
  ffi.Pointer<BFMatcher> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Bool, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> BFMatcher_CreateWithParams_Async(
  int normType,
  bool crossCheck,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> BFMatcher_Create_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        BFMatcher, Mat, Mat, ffi.Int, ffi.Pointer<VecVecDMatch>)>()
external ffi.Pointer<CvStatus> BFMatcher_KnnMatch(
  BFMatcher b,
  Mat query,
  Mat train,
  int k,
  ffi.Pointer<VecVecDMatch> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        BFMatcher, Mat, Mat, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> BFMatcher_KnnMatch_Async(
  BFMatcher self,
  Mat query,
  Mat train,
  int k,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        BFMatcher, Mat, Mat, ffi.Pointer<VecDMatch>)>()
external ffi.Pointer<CvStatus> BFMatcher_Match(
  BFMatcher b,
  Mat query,
  Mat train,
  ffi.Pointer<VecDMatch> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(BFMatcher, Mat, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> BFMatcher_Match_Async(
  BFMatcher self,
  Mat query,
  Mat train,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Void Function(BRISKPtr)>()
external void BRISK_Close(
  BRISKPtr b,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(BRISKPtr, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> BRISK_Close_Async(
  BRISKPtr self,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<BRISK>)>()
external ffi.Pointer<CvStatus> BRISK_Create(
  ffi.Pointer<BRISK> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> BRISK_Create_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(BRISK, Mat, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> BRISK_Detect(
  BRISK b,
  Mat src,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        BRISK, Mat, Mat, Mat, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> BRISK_DetectAndCompute(
  BRISK b,
  Mat src,
  Mat mask,
  Mat desc,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(BRISK, Mat, Mat, imp1.CvCallback_2)>()
external ffi.Pointer<CvStatus> BRISK_DetectAndCompute_Async(
  BRISK self,
  Mat src,
  Mat mask,
  imp1.CvCallback_2 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(BRISK, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> BRISK_Detect_Async(
  BRISK self,
  Mat src,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, VecKeyPoint, Mat, Scalar, ffi.Int)>()
external ffi.Pointer<CvStatus> DrawKeyPoints(
  Mat src,
  VecKeyPoint kp,
  Mat dst,
  Scalar color,
  int flags,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, VecKeyPoint, Mat, Scalar, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> DrawKeyPoints_Async(
  Mat src,
  VecKeyPoint kp,
  Mat dst,
  Scalar color,
  int flags,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, VecKeyPoint, Mat, VecKeyPoint,
        VecDMatch, Mat, Scalar, Scalar, VecChar, ffi.Int)>()
external ffi.Pointer<CvStatus> DrawMatches(
  Mat img1,
  VecKeyPoint kp1,
  Mat img2,
  VecKeyPoint kp2,
  VecDMatch matches1to2,
  Mat outImg,
  Scalar matchesColor,
  Scalar pointColor,
  VecChar matchesMask,
  int flags,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, VecKeyPoint, Mat, VecKeyPoint,
        VecDMatch, Mat, Scalar, Scalar, VecChar, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> DrawMatches_Async(
  Mat img1,
  VecKeyPoint kp1,
  Mat img2,
  VecKeyPoint kp2,
  VecDMatch matches1to2,
  Mat outImg,
  Scalar matchesColor,
  Scalar pointColor,
  VecChar matchesMask,
  int flags,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Void Function(FastFeatureDetectorPtr)>()
external void FastFeatureDetector_Close(
  FastFeatureDetectorPtr f,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(FastFeatureDetectorPtr, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> FastFeatureDetector_Close_Async(
  FastFeatureDetectorPtr self,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<FastFeatureDetector>)>()
external ffi.Pointer<CvStatus> FastFeatureDetector_Create(
  ffi.Pointer<FastFeatureDetector> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Int, ffi.Bool, ffi.Int, ffi.Pointer<FastFeatureDetector>)>()
external ffi.Pointer<CvStatus> FastFeatureDetector_CreateWithParams(
  int threshold,
  bool nonmaxSuppression,
  int type,
  ffi.Pointer<FastFeatureDetector> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Int, ffi.Bool, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FastFeatureDetector_CreateWithParams_Async(
  int threshold,
  bool nonmaxSuppression,
  int type,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FastFeatureDetector_Create_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        FastFeatureDetector, Mat, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> FastFeatureDetector_Detect(
  FastFeatureDetector f,
  Mat src,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        FastFeatureDetector, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FastFeatureDetector_Detect_Async(
  FastFeatureDetector self,
  Mat src,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Void Function(FlannBasedMatcherPtr)>()
external void FlannBasedMatcher_Close(
  FlannBasedMatcherPtr f,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(FlannBasedMatcherPtr, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> FlannBasedMatcher_Close_Async(
  FlannBasedMatcherPtr self,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<FlannBasedMatcher>)>()
external ffi.Pointer<CvStatus> FlannBasedMatcher_Create(
  ffi.Pointer<FlannBasedMatcher> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FlannBasedMatcher_Create_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        FlannBasedMatcher, Mat, Mat, ffi.Int, ffi.Pointer<VecVecDMatch>)>()
external ffi.Pointer<CvStatus> FlannBasedMatcher_KnnMatch(
  FlannBasedMatcher f,
  Mat query,
  Mat train,
  int k,
  ffi.Pointer<VecVecDMatch> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        FlannBasedMatcher, Mat, Mat, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FlannBasedMatcher_KnnMatch_Async(
  FlannBasedMatcher self,
  Mat query,
  Mat train,
  int k,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Void Function(GFTTDetectorPtr)>()
external void GFTTDetector_Close(
  GFTTDetectorPtr a,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GFTTDetectorPtr, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> GFTTDetector_Close_Async(
  GFTTDetectorPtr self,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<GFTTDetector>)>()
external ffi.Pointer<CvStatus> GFTTDetector_Create(
  ffi.Pointer<GFTTDetector> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> GFTTDetector_Create_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GFTTDetector, Mat, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> GFTTDetector_Detect(
  GFTTDetector a,
  Mat src,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GFTTDetector, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> GFTTDetector_Detect_Async(
  GFTTDetector self,
  Mat src,
  imp1.CvCallback_1 callback,
);
